# epic-capybara

./: .gitignore  README.md  bara.py  capy.py  pyproject.toml
.github/workflows/: build.yml  publish.yml
epic_capybara/: __about__.py  github.py  util.py
epic_capybara/cli/: __init__.py  bara.py  capy.py  cate.py  comment.py  rucio.py
tests/: test_bara.py  test_doctest.py  test_filesystem.py
