[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epic-capybara"
description = 'Track and visualize multi-dimensional CI metrics'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Dmitry Kalinkin", email = "dmitry.kalinkin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "awkward",
  "click",
  "uproot",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/eic/epic-capybara#readme"
Issues = "https://github.com/eic/epic-capybara/issues"
Source = "https://github.com/eic/epic-capybara"

[project.scripts]
capybara = "epic_capybara.__main__:main"

[tool.hatch.version]
path = "epic_capybara/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=epic_capybara --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "epic_capybara/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
